syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    string fileType = 3;
    bytes data = 4;
    int32 numChunks = 5;
}

message RetrieveFile {
    string fileName = 1;
}

message AskInfo {
    oneof function {
        bool activeNodesList = 1;
        bool totalDiskSpace = 2;
        bool requestsNum = 3;
        StorageNodeInfo nodeInfo = 4;
    }
}

message StorageNodeInfo {
    string nodeId = 1;
    string nodeIP = 2;
    bool active = 3;
    string spaceAvailable = 4;
    string requestsNum = 5;
    StoreChunk storeChunk = 6;
}

message ProtoWrapper {
    string requestor = 1;
    string ip = 2;
    oneof function {
        AskInfo askInfo = 3;
        string addNode = 4;
        string removeNode = 5;
        string heartbeat = 6;
        StoreChunk storeChunk = 7;
        RetrieveFile retrieveFile = 8;
    }

}